--- a/recipe-finder/index.html
+++ b/recipe-finder/index.html
@@ -17,37 +17,38 @@
         <!-- search box -->
         <div class="search-box">
             <form>
-                <input type="text" placeholder="Search ingredients">
+                <input type="text" placeholder="Search recipes" aria-label="Search recipes">
                 <button type="submit">Search</button>
             </form>
         </div>
 
 
     </header>
-    <!-- recipes -->
-    <section class="recipe-section">
-        <div class="recipe-container">
+
+    <main>
+        <!-- recipes -->
+        <section class="recipe-section">
+            <div class="recipe-container">
+            </div>
+        </section>
 
 
-        </div>
-    </section>
-    <!-- featured section -->
-    <main class="feature-section">
+        <!-- featured section -->
+        <section class="feature-section"></section>
 
+        <!-- spinner -->
+          <div class="spinner-container hidden">
+        <div class="spinner" id="spinner" role="status" aria-label="loading..."></div>
 
-
+    </div>
 
     </main>
 
-
-<div class="modal hidden">
-    <div class="modal-content">
-        
+    <div class="modal hidden" role="dialog" aria-modal="true">
+        <div class="modal-content"> </div>
     </div>
-</div>
 
-
-
+   
     <script src="script.js"></script>
 </body>
 
